...
                    Label("Add Task", systemImage: "plus")
                }
                .modifier(StandardButtonStyle())
                .padding(20)
                .disabled(viewModel.isShowingDetail)
                .blur(radius: viewModel.addBlurIfShowingDetail())
                .accessibilityIdentifier("add task button")
            }
            .onReceive(viewModel.$sortDescriptors) { newSortDescriptors in
                _tasks.wrappedValue.nsSortDescriptors = newSortDescriptors
            }
            .listStyle(.plain)
            .navigationBarItems(
...
